# pydraconf

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
examples/basic/: README.md  main.py
examples/basic/configs/: base.py
examples/basic/configs/database/: postgres.py  sqlite.py
examples/ml_training/: README.md  train.py
examples/ml_training/configs/: base.py
examples/ml_training/configs/model/: resnet50.py  variants.py  vit.py
examples/ml_training/configs/optimizer/: adam.py  sgd.py
examples/multi_class_file/: README.md  train.py
examples/multi_class_file/configs/: base.py
examples/multi_class_file/configs/model/: variants.py
examples/multi_dir_config/: train.py
examples/multi_dir_config/shared_configs/: base.py
src/pydra/: __init__.py
src/pydraconf/: __init__.py  cli.py  decorators.py  registry.py  utils.py
tests/: test_cli.py  test_decorators.py  test_integration.py  test_registry.py  test_utils.py
tests/fixtures/configs/: base.py
tests/fixtures/configs/model/: base.py  large.py  small.py
