[project]
name = "pydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aigoncharov", email = "andrey@faillearnrepeat.net" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
